--- a/FreeBuildJ/.project
+++ b/FreeBuildJ/.project
@@ -23,6 +23,15 @@
 	</natures>
 	<filteredResources>
 		<filter>
+			<id>1397793657107</id>
+			<name>shared-libs</name>
+			<type>10</type>
+			<matcher>
+				<id>org.eclipse.ui.ide.multiFilter</id>
+				<arguments>1.0-name-matches-false-false-GLSL-Shader-Editor</arguments>
+			</matcher>
+		</filter>
+		<filter>
 			<id>1380479822085</id>
 			<name>shared-libs/lwjgl-2.9.0/src</name>
 			<type>22</type>
