--- a/.classpath
+++ b/.classpath
@@ -11,12 +11,12 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/LWJGL"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/CSSBox"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/GLSL-Shader-Editor"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/libcrane">
-		<attributes>
-			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="/Users/thomas/Documents/scala-workspace-temp/libcrane"/>
-		</attributes>
-	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Jython 2.7"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/HTMLParserNu"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/libcrane">
+		<attributes>
+			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="libcrane"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
