--- a/.project
+++ b/.project
@@ -3,6 +3,10 @@
 	<name>FreeBuildJ</name>
 	<comment></comment>
 	<projects>
+		<project>CSSBox</project>
+		<project>GLSL-Shader-Editor</project>
+		<project>LDrawParser</project>
+		<project>libcrane</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
