set jStyleParser as a dependency

--- a/.classpath
+++ b/.classpath
@@ -14,5 +14,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Jython 2.7"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/HTMLParserNu"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/libcrane"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/jStyleParser"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
